<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

		<RelativeLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/RelativeLayout01"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
		    	<TextView
		            android:id="@+id/textView01"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentLeft="true"
		            android:textSize="11sp"
		            android:text="@string/general_debug" />

		        <TextView
		            android:id="@+id/textView2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_alignParentRight="true"
		            android:textSize="11sp"
		            android:text="" />
		</RelativeLayout>

		<RelativeLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:id="@+id/RelativeLayout02"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="-25dp"
		    android:gravity="center" >
		       <TextView
		           android:id="@+id/textView1"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
	    		    android:text="@string/dashDisp"
		           android:textColor="#FFFFFF"
		           android:textSize="90sp" />

		       <TextView
		           android:id="@+id/textView4"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:layout_alignBaseline="@+id/textView1"
		           android:layout_alignBottom="@+id/textView1"
		           android:layout_toRightOf="@+id/textView1"
		           android:text="@string/watt_symbol"
		           android:textColor="#FFFFFF"
		           android:textSize="27sp" />

		       <TextView
		             android:id="@+id/textView_delta"
		             android:layout_width="wrap_content"
		             android:layout_height="wrap_content"
		             android:layout_alignRight="@+id/textView4"
		             android:layout_centerVertical="true"
		             android:text=""
		             android:textColor="#FFFFFF"
		             android:textSize="15sp" />

		       <TextView
		           android:id="@+id/textView_p3"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:layout_alignParentTop="true"
		           android:layout_marginTop="22dp"
		           android:layout_alignRight="@+id/textView_delta"
		           android:textColor="#000000"
		           android:text="@string/watt_symbol"
		           android:textSize="10sp" />

	           <TextView
	               android:id="@+id/textView_p2"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_alignRight="@+id/textView_p3"
	               android:layout_below="@+id/textView_p3"
	               android:layout_marginTop="-3dp"
	               android:layout_marginRight="-5dp"
	               android:textColor="#000000"
	               android:text="@string/watt_symbol"
	               android:textSize="10sp" />

	           <TextView
	               android:id="@+id/textView_p1"
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	               android:layout_alignRight="@+id/textView_p2"
	               android:layout_below="@+id/textView_p2"
	               android:textColor="#000000"
	               android:text="@string/watt_symbol"
	               android:layout_marginTop="-3dp"
	               android:textSize="10sp" />

		</RelativeLayout>

    <com.androidplot.xy.XYPlot
        android:id="@+id/Plot1"
        android:layout_width="fill_parent"
        android:layout_height="120px"
        android:layout_marginLeft="-20px"
        android:layout_marginRight="0px"
        android:layout_marginTop="-10px"
        title="Power (W) - last minute - 3 phases" />

        <com.androidplot.xy.XYPlot
        android:id="@+id/Plot2"
        android:layout_width="fill_parent"
        android:layout_height="120px"
        android:layout_marginLeft="-20px"
        android:layout_marginRight="0px"
        android:layout_marginTop="-10px"
        title="Power (W) - last day - connecting to server api..." />

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:shrinkColumns="*"
            android:stretchColumns="0,1,2,3,4,5" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_r1"
                    android:text="@string/today"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                    <TableLayout
                        android:id="@+id/tableR1Layout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shrinkColumns="*" >


	                 <TableRow
	                     android:id="@+id/tableR1Row1"
	                     android:layout_width="wrap_content"
	                     android:layout_height="wrap_content"
	                     android:gravity="right" >

		                <TextView
		                    android:id="@+id/TextView_r2"
		                    android:gravity="right"
		                    android:text=""
		                    android:textSize="18sp" android:textStyle="bold"/>
		                 <TextView
		                    android:id="@+id/TextView_r3"
		                    android:text="@string/kwh_symbol"
		                    android:textSize="9sp" />
		               </TableRow>


		                <TableRow
		                    android:id="@+id/tableR1Row2"
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:layout_marginTop="-7sp"
		                    android:gravity="right" >

		                <TextView
		                    android:id="@+id/TextView_r22"
		                    android:gravity="right"
		                    android:text=""
		                    android:textSize="9sp" />
		                 <TextView
		                    android:id="@+id/TextView_r33"
		                    android:text="@string/watt_symbol"
		                    android:textSize="9sp" />
		               </TableRow>
					</TableLayout>

                <TextView
                    android:id="@+id/TextView_r4"
                    android:gravity="right"
                    android:text=""
                    android:textSize="18sp" android:textStyle="bold"/>

                <TextView
                    android:id="@+id/TextView_r5"
                    android:text=""
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/TextView_r6"
                    android:gravity="right"
                    android:text="@string/percent_symbol"
                    android:textColor="#ff0000"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow_image1"
                    android:layout_width="13dp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:src="@drawable/red_arrow" android:layout_marginTop="3dp"/>
                    android:contentDescription="@string/arrow"
		        </TableRow>

		        <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_rd1"
                    android:text="@string/week"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TableLayout
                    android:id="@+id/tableR2Layout2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:shrinkColumns="*" >

	                 <TableRow
	                     android:id="@+id/tableR2Row1"
	                     android:layout_width="wrap_content"
	                     android:layout_height="wrap_content"
	                     android:gravity="right" >

		               <TextView
		                    android:id="@+id/TextView_rd2"
		                    android:gravity="right"
		                    android:text=""
		                    android:textSize="18sp" android:textStyle="bold"/>

                		<TextView
		                    android:id="@+id/TextView_rd3"
		                    android:text="@string/kwh_symbol"
		                    android:textSize="9sp" />
		             </TableRow>

		             <TableRow
		                 android:id="@+id/tableR2Row2"
		                 android:layout_width="wrap_content"
		                 android:layout_height="wrap_content"
		                 android:layout_marginTop="-7sp"
		                 android:gravity="right" >

					      <TextView
		                    android:id="@+id/TextView_rd22"
		                    android:gravity="right"
		                    android:text=""
		                    android:textSize="9sp" />
 			              <TextView
		                    android:id="@+id/TextView_rd33"
		                    android:text="@string/watt_symbol"
		                    android:textSize="9sp" />
		             </TableRow>
				</TableLayout>

                <TextView
                    android:id="@+id/TextView_rd4"
                    android:gravity="right"
                    android:text=""
                    android:textSize="18sp" android:textStyle="bold"/>

                <TextView
                    android:id="@+id/TextView_rd5"
                    android:text=""
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/TextView_rd6"
                    android:gravity="right"
                    android:text="@string/percent_symbol"
                    android:textColor="#00ff00"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow_image2"
                    android:layout_width="13dp"
                    android:layout_height="15sp"
                    android:layout_gravity="center|right"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/green_arrow" />

		        </TableRow>

		        <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView_rt1"
                    android:text="@string/month"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

					<TableLayout
					    android:id="@+id/tableR3Layout2"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:shrinkColumns="*" >

	                 <TableRow
	                     android:id="@+id/tableR3Row1"
	                     android:layout_width="wrap_content"
	                     android:layout_height="wrap_content"
	                     android:gravity="right" >

		                <TextView
		                    android:id="@+id/TextView_rt2"
		                    android:gravity="right"
		                    android:text=""
		                    android:textSize="18sp" android:textStyle="bold"/>

              		 	<TextView
		                    android:id="@+id/TextView_rt3"
		                    android:text="@string/kwh_symbol"
		                    android:textSize="9sp" />
		             </TableRow>

		             <TableRow
		                 android:id="@+id/tableR3Row2"
		                 android:layout_width="wrap_content"
		                 android:layout_height="wrap_content"
		                 android:layout_marginTop="-7sp"
		                 android:gravity="right" >

					      <TextView
		                    android:id="@+id/TextView_rt22"
		                    android:gravity="right"
		                    android:text=""
		                    android:textSize="9sp" />
 			              <TextView
		                    android:id="@+id/TextView_rt33"
		                    android:text="@string/watt_symbol"
		                    android:textSize="9sp" />
		               </TableRow>
					</TableLayout>

                <TextView
                    android:id="@+id/TextView_rt4"
                    android:gravity="right"
                    android:text=""
                    android:textSize="18sp" android:textStyle="bold"/>

                <TextView
                    android:id="@+id/TextView_rt5"
                    android:text=""
                    android:textSize="9sp" />

                <TextView
                    android:id="@+id/TextView_rt6"
                    android:gravity="right"
                    android:text="@string/percent_symbol"
                    android:textColor="#00ff00"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/arrow_image3"
                    android:layout_width="13dp"
                    android:layout_height="15sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/arrow"
                    android:src="@drawable/green_arrow" />

		        </TableRow>
		</TableLayout>

</LinearLayout>
